# g1-arm-teach-play

./: .gitignore  CMakeLists.txt  LICENSE  README.md  play.cpp  play_with_motions.cpp  teach.cpp  teach_with_name.cpp  tts_probe.cpp  watchdog.cpp
docs/: env-setup.md
systemd/: g1-arm7-watchdog.service
